--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@react-router/serve": "7.10.1",
     "isbot": "^5.1.31",
     "react": "^19.2.3",
+    "react-aria-components": "^1.14.0",
     "react-dom": "^19.2.3",
     "react-router": "7.10.1"
   },
   "devDependencies": {
     "@react-router/dev": "7.10.1",
-    "@tailwindcss/vite": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/node": "^22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "tailwindcss": "^4.1.13",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4"
